Hides overflow to prevent scroll bar appearing

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -28,6 +28,7 @@ main {
 body {
   margin: 0;
   max-width: 100vw;
+  overflow: hidden;
   @extend .is-light-grey-bg;
 }
 
